@@ -36,10 +36,13 @@
     <xi:include href="xml/krb5-ext.xml"/>
   </chapter>
 
-  <index>
-    <title>Index</title>
+  <index id="api-index-full">
+    <title>Index of all symbols</title>
   </index>
-  <index role="0.1.0">
+  <index role="0.1.0" id="api-index-0-1-0">
     <title>Index of new symbols in 0.1.0</title>
+  </index>
+  <index role="0.1.4" id="api-index-0-1-4">
+    <title>Index of new symbols in 0.1.4</title>
   </index>
 </book>
