@@ -1,4 +1,5 @@
 # List of source files containing translatable strings for GSS.
+lib/meta.c
 lib/error.c
 lib/krb5/error.c
 src/gss.c
