@@ -4,10 +4,15 @@ See the end for copying conditions.
 
 * Version 0.1.4 (unreleased)
 
+** Add new interfaces defined in RFC 5801.
+The APIs are gss_inquire_mech_for_saslname and
+gss_inquire_saslname_for_mech.
+
 ** KRB5: Fix bug in channel binding computation.
 
 ** API and ABI modifications.
-No changes since last version.
+gss_inquire_mech_for_saslname: ADDED.
+gss_inquire_saslname_for_mech: ADDED.
 
 * Version 0.1.3 (released 2010-03-15)
 
